--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sooraj Parakkattil Ravi | Portfolio</title>
+    <title>Sooraj | Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-200">
@@ -24,7 +24,7 @@
 
     <section id="hero" class="h-screen flex items-center justify-center bg-gray-200 dark:bg-gray-800 text-center">
         <div>
-            <h2 class="text-5xl font-bold mb-4">Hello, I'm Sooraj Parakkattil Ravi</h2>
+            <h2 class="text-5xl font-bold mb-4">Hello, I'm Sooraj </h2>
             <p class="text-xl">Certified SAFe® 6 Product Owner/Product Manager skilled in transforming ideas into reality.</p>
             <a href="#projects" class="mt-6 inline-block bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">View My Work</a>
         </div>
